<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:paddingLeft="8dp"
            android:textSize="@dimen/normal_text_size" />

        <!-- Question 1. -->
        <TextView
            style="@style/Headings"
            android:text="@string/question1" />

        <TextView
            style="@style/Questions"
            android:text="@string/question1_description" />

        <EditText
            android:id="@+id/user_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_answer"
            android:inputType="textCapWords"
            android:paddingLeft="8dp"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/correct_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:text="" />

        <!-- Question 2. -->
        <TextView
            style="@style/Headings"
            android:text="@string/question2" />

        <TextView
            style="@style/Questions"
            android:text="@string/question2_description" />

        <EditText
            android:id="@+id/user_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_answer"
            android:inputType="textCapWords"
            android:paddingLeft="8dp"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/correct_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:text="" />

        <!-- Question 3. -->
        <TextView
            style="@style/Headings"
            android:text="@string/question3" />

        <TextView
            style="@style/Questions"
            android:text="@string/question3_description" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3_opt1_radio_button"
                style="@style/RadioButtonAnswers"
                android:text="@string/q3_option1" />

            <RadioButton
                android:id="@+id/q3_opt2_radio_button"
                style="@style/RadioButtonAnswers"
                android:text="@string/q3_option2" />

            <RadioButton
                android:id="@+id/q3_opt3_radio_button"
                style="@style/RadioButtonAnswers"
                android:text="@string/q3_option3" />
        </RadioGroup>

        <TextView
            android:id="@+id/correct_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:text="" />

        <!-- Question 4. -->
        <TextView
            style="@style/Headings"
            android:text="@string/question4" />

        <TextView
            style="@style/Questions"
            android:text="@string/question4_description" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4_opt1_radio_button"
                style="@style/RadioButtonAnswers"
                android:text="@string/q4_option1" />

            <RadioButton
                android:id="@+id/q4_opt2_radio_button"
                style="@style/RadioButtonAnswers"
                android:text="@string/q4_option2" />

            <RadioButton
                android:id="@+id/q4_opt3_radio_button"
                style="@style/RadioButtonAnswers"
                android:text="@string/q4_option3" />
        </RadioGroup>

        <TextView
            android:id="@+id/correct_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:text="" />

        <!-- Question 5. -->
        <TextView
            style="@style/Headings"
            android:text="@string/question5" />

        <TextView
            style="@style/Questions"
            android:text="@string/question5_description" />

        <CheckBox
            android:id="@+id/q5_option1_check_box"
            style="@style/CheckBoxAnswers"
            android:text="@string/q5_option1" />

        <CheckBox
            android:id="@+id/q5_option2_check_box"
            style="@style/CheckBoxAnswers"
            android:text="@string/q5_option2" />

        <CheckBox
            android:id="@+id/q5_option3_check_box"
            style="@style/CheckBoxAnswers"
            android:text="@string/q5_option3" />

        <CheckBox

            android:id="@+id/q5_option4_check_box"
            style="@style/CheckBoxAnswers"
            android:text="@string/q5_option4" />

        <TextView
            android:id="@+id/correct_answer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:text="" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:onClick="onSubmit"
            android:text="Submit"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>
